# libwebsite

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  PKGBUILD.tpl  README.markdown  configure.ac  todo.txt  wscript
include/: obstack.h  website.h
src/: core.c  core.h  search.c  search.h
test/: CMakeLists.txt  detailed.c  httptest.py  routing.c  runtests.c  simple.c  websock.html  websocket.c
